fixed: disable clicking of invisible button - also fixes buttons adding img to themselves (rather than parent) - also clean up of code in ADD MEDIA button click handler

--- a/src/cms/css/main.scss
+++ b/src/cms/css/main.scss
@@ -81,27 +81,29 @@ p.cms-editable {
   padding: 4px;
   margin: 0 auto;
   margin-bottom:-20px;
+  opacity: 0;
+  outline-color: transparent;
+  outline-style: dashed;
+  outline-offset: 0;
+  outline-width: 0;
+  overflow: hidden;
   text-align:center;
+  text-overflow: ellipsis;
+  visibility: hidden;
   width: 80px;
-  outline-color: transparent !important;
-  outline-style: dashed !important;
-  outline-offset: 0 !important;
-  outline-width: 0 !important;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  opacity: 0;
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 p[contenteditable]:hover {
   .append-media-btn {
     opacity: 1;
+    visibility: visible;
   }
 }
 
